<resources>

    <string name="app_name">广外助手</string>
	<string name="course">课程表</string>
	<string name="learning">学习</string>
	<string name="living">生活</string>
	<string name="personal_center">个人中心</string>
    
	<string name="warning">提示</string>
	<string name="error">出错</string>
	<string name="apply">确认</string>
	<string name="delelte">删除</string>
	<string name="cancel">取消</string>
	
	<string name="no_internet">网络连接故障！</string>
	<string name="not_logged">未登录！</string>
	<string name="loading_error">加载失败！</string>
	<string name="loading_information_error">加载个人信息失败！</string>
	<string name="login_failed">登录失败！</string>
	
	<string name="login">登录</string>
	<string name="logout">注销</string>
	<string name="not_logged2">未登录</string>
	<string name="student_number">学号：</string>
	<string name="option">设置</string>
	<string name="about">关于与建议</string>
	<string name="close">退出</string>
	<string name="photo">照片：</string>	
	<string name="name">姓名：</string>
	<string name="identity">身份：</string>
	<string name="academy">学院：</string>
	<string name="password">密码：</string>
	<string name="remenber_password">记住密码</string>
	<string name="auto_login">自动登录</string>
	
	<string name="close_question">确定要退出吗？</string>
	<string name="empty"></string>
	<string name="mon">周一</string>
	<string name="tue">周二</string>
	<string name="wen">周三</string>
	<string name="thu">周四</string>
	<string name="fri">周五</string>
	<string name="sta">周六</string>
	<string name="sun">周日</string>
	<string name="course_loading">加载课程</string>
	
	<string name="news">新闻</string>
	<string name="announcement">公告</string>
	<string name="course_table">课程表</string>
	<string name="score">成绩</string>
	<string name="CET_score">四六级成绩</string>
	
	<string name="listening_score">听力成绩：</string>
	<string name="reading_score">阅读成绩：</string>
	<string name="writing_score">写作成绩：</string>
	<string name="comprehensive_score">综合成绩：</string>
	<string name="lscore">成绩：</string>
	
	<string name="empty_message">没有加载到记录，请下拉刷新试试！</string>
	
	<string name="weather">天气</string>
	<string name="YKT">校园卡</string>
	<string name="water_order">订水（未完成）</string>
	<string name="repair">报修（未完成）</string>
	<string name="lost_and_find">失物招领（未完成）</string>
	
	<string name="recharge">充值</string>
	<string name="today_account">当日流水</string>
	<string name="history_account">历史流水</string>
	<string name="report_loss">挂失</string>
	<string name="modify_password">修改密码</string>
	
	<string name="ykt_number">校园卡帐号：</string>
	<string name="balance">余额：</string>
	<string name="state">状态：</string>
	<string name="money">金额：</string>
	<string name="transition_balance">过渡余额：</string>
	<string name="start_day">初始日期</string>
	<string name="end_day">结束日期</string>
	
	<string name="old_password1">旧密码：</string>
	<string name="old_password2">确认旧密码：</string>
	<string name="new_password">新密码：</string>
	
	<string name="morning">上午</string>
	<string name="afternoon">下午</string>
	<string name="work_days">工作日</string>
	<string name="weekend">周末</string>
	<string name="not_finished">该功能可能未实现或服务器出现故障！</string>
	
	<string name="courseName">课程名</string>
	<string name="place">教室</string>
	<string name="startTime">开始节数</string>
	<string name="numbs">结束节数</string>
	<string name="teacherName">老师姓名</string>
	<string name="teacherNumber">老师电话</string>
	<string name="teacherEmail">老师邮箱</string>
	<string name="memorandum">备忘录</string>
	
</resources>
