<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    >
		<Button android:id="@+id/news"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/news"
		    android:onClick="showNewsActivity"
		 	style="@style/button"/>
	    <AdapterViewFlipper android:id="@+id/news_flipper"
	        android:layout_width="match_parent"
	        android:layout_height="80dip"
	        android:layout_marginLeft="3dip"
	        android:layout_marginRight="2dip"
	        android:visibility="gone"
	        android:flipInterval="5000"/>
		<Button android:id="@+id/announcement"
		    android:text="@string/announcement"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:onClick="showAnnouncementActivity"
		    style="@style/button"/>
	    <AdapterViewFlipper android:id="@+id/announcement_flipper"
	        android:layout_width="match_parent"
	        android:layout_height="80dip"
	        android:layout_marginLeft="3dip"
	        android:layout_marginRight="2dip"
	        android:visibility="gone"
	        android:flipInterval="5000"/>
		<Button android:id="@+id/course_table"
		    android:text="@string/course_table"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:onClick="showCoursesFragment"
		    style="@style/button"/>
		<Button android:id="@+id/score"
		    android:text="@string/score"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:onClick="showScoreActivity"
		    style="@style/button"/>
		<Button android:id="@+id/CET_score"
		    android:text="@string/CET_score"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:onClick="showCETScoreActivity"
		    style="@style/button"/>
	</LinearLayout>
</ScrollView>
