<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
	<ScrollView 
	    android:layout_width="match_parent"
	    android:layout_height="0dip"
	    android:layout_weight="1"
	    android:scrollbars="vertical">
    	<LinearLayout 
		    android:layout_width="fill_parent" 
		    android:layout_height="fill_parent"
		    android:orientation="vertical" >
		    <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        >
			    <TextView
			        android:text="@string/courseName"
			        android:layout_height="fill_parent"
			        android:layout_width="0dp"
			        android:layout_weight="1"
			        android:gravity="center"
	            	android:background="@drawable/button_left_top_rectangle"/>
			    <EditText android:id="@+id/courseName"
			        android:layout_height="35dp"
			        android:layout_width="0dp"
			        android:layout_weight="2"
			        android:gravity="center"
	            	android:background="@drawable/button_right_top_rectangle"/>
		    </LinearLayout>
		    <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        >
			    <TextView
			        android:text="@string/place"
			        android:layout_height="fill_parent"
			        android:layout_width="0dp"
			        android:layout_weight="1"
			        android:gravity="center"
	            	android:background="@drawable/button_left_left_rectangle"/>
			    <EditText android:id="@+id/place"
			        android:layout_height="35dp"
			        android:layout_width="0dp"
			        android:layout_weight="2"
			        android:gravity="center"
	            	android:background="@drawable/button_right_right_rectangle"/>
		    </LinearLayout>
		    <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        >
			    <TextView
			        android:text="@string/startTime"
			        android:layout_height="fill_parent"
			        android:layout_width="0dp"
			        android:layout_weight="1"
			        android:gravity="center"
	            	android:background="@drawable/button_left_left_rectangle"/>
			    <EditText android:id="@+id/startTime"
			        android:layout_height="35dp"
			        android:layout_width="0dp"
			        android:layout_weight="2"
			        android:gravity="center"
	            	android:background="@drawable/button_right_right_rectangle"/>
		    </LinearLayout>
		    <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        >
			    <TextView
			        android:text="@string/numbs"
			        android:layout_height="fill_parent"
			        android:layout_width="0dp"
			        android:layout_weight="1"
			        android:gravity="center"
	            	android:background="@drawable/button_left_left_rectangle"/>
			    <EditText android:id="@+id/numbs"
			        android:layout_height="35dp"
			        android:layout_width="0dp"
			        android:layout_weight="2"
			        android:gravity="center"
	            	android:background="@drawable/button_right_right_rectangle"/>
		    </LinearLayout>
		    <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        >
			    <TextView
			        android:text="@string/teacherName"
			        android:layout_height="fill_parent"
			        android:layout_width="0dp"
			        android:layout_weight="1"
			        android:gravity="center"
	            	android:background="@drawable/button_left_left_rectangle"/>
			    <EditText android:id="@+id/teacherName"
			        android:layout_height="35dp"
			        android:layout_width="0dp"
			        android:layout_weight="2"
			        android:gravity="center"
	            	android:background="@drawable/button_right_right_rectangle"/>
		    </LinearLayout>
		    <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        >
			    <TextView
			        android:text="@string/teacherNumber"
			        android:layout_height="fill_parent"
			        android:layout_width="0dp"
			        android:layout_weight="1"
			        android:gravity="center"
	            	android:background="@drawable/button_left_left_rectangle"/>
			    <EditText android:id="@+id/teacherNumber"
			        android:layout_height="35dp"
			        android:layout_width="0dp"
			        android:layout_weight="2"
			        android:gravity="center"
	            	android:background="@drawable/button_right_right_rectangle"/>
		    </LinearLayout>
		    <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        >
			    <TextView
			        android:text="@string/teacherEmail"
			        android:layout_height="fill_parent"
			        android:layout_width="0dp"
			        android:layout_weight="1"
			        android:gravity="center"
	            	android:background="@drawable/button_left_left_rectangle"/>
			    <EditText android:id="@+id/teacherEmail"
			        android:layout_height="35dp"
			        android:layout_width="0dp"
			        android:layout_weight="2"
			        android:gravity="center"
	            	android:background="@drawable/button_right_right_rectangle"/>
		    </LinearLayout>
		    <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        >
			    <TextView
			        android:text="@string/memorandum"
			        android:layout_height="fill_parent"
			        android:layout_width="0dp"
			        android:layout_weight="1"
			        android:gravity="center"
	            	android:background="@drawable/button_left_bottom_rectangle"/>
			    <EditText android:id="@+id/memorandum"
			        android:layout_height="70dp"
			        android:layout_width="0dp"
			        android:layout_weight="2"
					android:gravity="top"
					android:scrollbars="vertical"
	            	android:background="@drawable/button_right_bottom_rectangle"/>
		    </LinearLayout>
		</LinearLayout>
	</ScrollView>
    <Button android:id="@+id/apply"
        android:text="@string/apply"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:onClick="showRechargeActivity"
        style="@style/top_button"/>
    <Button android:id="@+id/delete"
        android:text="@string/delelte"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:onClick="showModifyPasswordActivity"
        style="@style/bottom_button"/>
</LinearLayout>